add some details

--- a/frontend/src/app/the-content/the-content.component.html
+++ b/frontend/src/app/the-content/the-content.component.html
@@ -1,1 +1,1 @@
-<p>Welcome {{ username }}</p>
+<h1>Which day's schedule do you want to view or change? Please click the corresponding table directly</h1>
