--- a/frontend/src/app/menu/menu.component.html
+++ b/frontend/src/app/menu/menu.component.html
@@ -2,11 +2,11 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <ul class="navbar-nav">
             <li><a routerLink="/welcome" class="nav-link">Home</a></li>
-            <li><a *ngIf="hardcodedAuthenticationService.isUserLoggedIn" routerLink="/todos/what" class=""nav-link>Your Plan</a></li>
+            <li><a *ngIf="hardcodedAuthenticationService.isUserLoggedIn" routerLink="/your_plan/what" class=""nav-link>Your Plan</a></li>
         </ul>
         <ul class="navbar-nav navbar-collapse justify-content-end">
             <li><a *ngIf="!hardcodedAuthenticationService.isUserLoggedIn" routerLink="/login" class="nav-link">Login</a></li>
-            <li><a *ngIf="hardcodedAuthenticationService.isUserLoggedIn" routerLink="/your_plan/what" class="nav-link">Logout</a></li>
+            <li><a *ngIf="hardcodedAuthenticationService.isUserLoggedIn" routerLink="/welcome" class="nav-link">Logout</a></li>
         </ul>
     </nav>
 
