--- a/frontend/src/app/welcome/welcome.component.html
+++ b/frontend/src/app/welcome/welcome.component.html
@@ -1,8 +1,14 @@
+<div class="container">
+    <h1>Welcome, do you have any tasks to complete today? Do you want to see what unfinished tasks are there?</h1>
+    <h2>{{message}}</h2>
+</div>
+
+
 
 <div class="container">
 
 
-    <img class="img-responsive" width="400" height="200" src="assets/welcome.PNG">
+    <img class="img-responsive" src="assets/welcome.PNG">
 
 
 </div>
